--- a/css/posts.css
+++ b/css/posts.css
@@ -20,6 +20,7 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .grid-card {
     width: 100%;
+    border-radius:  5px;
     background-color: #ffffff;
     text-align: center;
     box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, .08);
