--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ html {
 	margin: 0px
 }
 body{
-	font-family: Avenir, Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
 	line-height: 1.8;
 	letter-spacing: 0.5px;
@@ -183,7 +183,7 @@ img.svg{
 .edina_tm_navigation_wrap .menu > ul > li a{
 	text-decoration: none;
 	color: #fff;
-	font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+	font-family: "Montserrat", Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	font-weight: 600;
 	display: inline-block;
@@ -261,7 +261,7 @@ img.svg{
 .edina_tm_mobile_menu_wrap .mob_menu > ul > li a{
 	text-decoration: none;
 	color: #FFFFFF;
-	font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+	font-family: "Montserrat", Arial, Helvetica, sans-serif;
 	font-weight: 600;
 	font-size: 20px;
 }
@@ -578,14 +578,14 @@ img.svg{
 	font-size: 40px;
 	font-weight: 800;
 	display: inline-block;
-	font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+	font-family: "Montserrat", Arial, Helvetica, sans-serif;
 }
 .edina_tm_main_title_holder_wrap .title_wrap span{
 	color: #fff;
 	font-size: 40px;
 	font-weight: 800;
 	display: inline-block;
-	font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+	font-family: "Montserrat", Arial, Helvetica, sans-serif;
 }
 .edina_tm_about_wrap .author_wrap{
 	width: 100%;
@@ -1112,7 +1112,7 @@ img.svg{
 .edina_tm_news_wrap .date_wrap{margin-bottom: 16px;}
 .edina_tm_news_wrap .date_wrap p{
 	color: #eee;
-    font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
     font-weight: 500;
 }
 .edina_tm_news_wrap .full_def{display: none;}
@@ -1167,7 +1167,7 @@ img.svg{
     background-color: #ed2629;
     padding: 8px 35px;
     display: inline-block;
-    font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
     font-weight: 500;
     border-radius: 3px;
 	
@@ -1227,7 +1227,7 @@ img.svg{
 }
 #edina_tm_popup_blog .date_wrap p{
 	color: #eee;
-    font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+    font-family:  "Montserrat", Arial, Helvetica, sans-serif;
     font-weight: 600;
 }
 #edina_tm_popup_blog .date_wrap p a{
@@ -1281,7 +1281,7 @@ img.svg{
 #edina_tm_popup_blog .title_holder h3{
     line-height: 1.4;
     font-weight: 600;
-    font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
 	color: #fff;
 }
 #edina_tm_popup_blog .title_holder h3 a{
@@ -1317,7 +1317,7 @@ img.svg{
     color: #fff;
     font-size: 15px;
     position: relative;
-    font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
     font-weight: 600;
 	
     -webkit-transition: all .3s ease;
@@ -1440,7 +1440,7 @@ img.svg{
     background-color: #ed2629;
     padding: 8px 35px;
     display: inline-block;
-    font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
     font-weight: 500;
     border-radius: 3px;
 	
@@ -1518,7 +1518,7 @@ img.svg{
 	background: linear-gradient(to right, rgb(255, 99, 121), rgb(144, 112, 253));
     padding: 8px 35px;
     display: inline-block;
-    font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
     font-weight: 500;
     border-radius: 3px;
 	
@@ -1568,7 +1568,7 @@ img.svg{
 .edina_tm_footer_wrap p a{
 	text-decoration: none;
 	color: #fff;
-	font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+	font-family: "Montserrat", Arial, Helvetica, sans-serif;
 	font-weight: 600;
 	
 	-webkit-transition: all .3s ease;
@@ -1644,7 +1644,7 @@ img.svg{
 
 .edina_tm_hero_header .hero_title .first{
 	color: #fff;
-	font-family: Avenir, "Montserrat", Arial, Helvetica, sans-serif;
+	font-family: "Montserrat", Arial, Helvetica, sans-serif;
 	font-size: 50px;
 	font-weight: 500;
 	margin-bottom: 30px;
