--- a/css/style.css
+++ b/css/style.css
@@ -48,12 +48,12 @@ img.svg{
 }
 
 /* My custom button */
-#my_btn {
+.my_btn {
 	background-color: #ed2629;
 	background: linear-gradient(to right, rgb(255, 99, 121), rgb(144, 112, 253));
 }
 
-#my_btn:hover {
+.my_btn:hover {
 	background-color: #555;
 	background: linear-gradient(to right,rgb(144, 112, 253), rgb(255, 99, 121));
 }
@@ -1776,3 +1776,17 @@ img.svg{
 	.edina_tm_main_demos_list_wrap ul li{width: 100%;padding: 0px;}
 	.container{padding: 0px 20px !important;}
 }	
+
+
+/* CUSTOM CSS */
+.edina_tm_universal_box_wrap .hero_title.homepage_third {
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	width: 100%;
+	max-width: 600px;
+	height: auto;
+	clear: both;
+	margin: 0 auto;
+}
