--- a/css/plugins.css
+++ b/css/plugins.css
@@ -2471,3 +2471,6 @@ input[type="button"]{
 .YTPOverlay.raster-dot.retina{
   background: url("../images/raster_dot@2x.png");
 }
+
+
+/* Custom CSS */
